# Tau

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.tau/: settings.json
.tau/extensions/lsp/: __init__.py  helper.py  manifest.json  tool.py
.tau/extensions/mcp/: __init__.py  commands.py  hooks.py  manifest.json  server_manager.py  tools.py  types.py
.tau/extensions/themes/: __init__.py  ayu-dark.yaml  dracula.yaml  everforest.yaml  material-ocean.yaml  (+2 more)
docs/: IMPLEMENTATION_SUMMARY.md  architecture.md  auth.md  cli-reference.md  development.md  docs.json  extension-settings.md  extensions.md  http-proxy.md  index.md  inference-providers.md  installation.md  keybindings.md  messages.md  project-context.md  project-structure.md  prompts.md  python-api.md  quickstart.md  sessions.md  settings.md  skills.md  themes.md  tools.md  usage.md
tau/agent/: __init__.py  service.py  types.py
tau/auth/: manager.py  storage.py  types.py
tau/builtins/: __init__.py
tau/commands/: __init__.py  registry.py  types.py
tau/console/: cli.py
tau/core/: registry.py
tau/engine/: __init__.py  service.py  types.py
tau/extensions/: __init__.py  api.py  context.py  events.py  loader.py  runtime.py  settings.py
tau/hooks/: __init__.py  engine.py  inference.py  runtime.py  service.py  session.py  tui.py  types.py
tau/inference/: __init__.py  types.py  utils.py
tau/message/: types.py  utils.py
tau/prompts/: expand.py  loader.py  registry.py  types.py
tau/rpc/: __init__.py  mode.py  types.py
tau/runtime/: service.py  types.py
tau/session/: branch_summarization.py  compaction.py  manager.py  types.py  utils.py
tau/settings/: manager.py  paths.py  storage.py  types.py  utils.py
tau/skills/: loader.py  registry.py  types.py
tau/themes/: loader.py  registry.py  types.py
tau/tool/: __init__.py  registry.py  render.py  types.py
tau/trust/: __init__.py  manager.py  types.py  utils.py
tau/tui/: __init__.py  agent_hooks.py  ansi.py  app.py  autocomplete.py  capabilities.py  component.py  diff.py  fuzzy.py  input.py  input_handler.py  keybinding_hints.py  keybindings.py  markdown.py  message_renderers.py  overlay.py  renderer.py  terminal.py  theme.py  tui.py  ui_context.py  utils.py
tau/utils/: http_proxy.py  image_processing.py  secrets.py  version_check.py
tests/: test_agent_prompt.py  test_agent_types.py  test_ansi.py  test_auth_command.py  test_auth_manager.py  test_auth_storage.py  test_branch_summarization.py  test_builtin_tools.py  test_compaction.py  test_diff.py  test_editor_protocol.py  test_engine_steering.py  test_engine_types.py  test_extension_api.py  test_footer_utils.py  test_fuzzy.py  test_http_proxy.py  test_image_processing.py  test_inference_api_text_utils.py  test_inference_error_utils.py  test_inference_types.py  test_inference_utils.py  test_keybindings.py  test_markdown.py  test_message_types.py  test_message_utils.py  test_model_availability.py  test_model_registry.py  test_model_selector_modal.py  test_model_types.py  test_packages_utils.py  test_pkce.py  test_prompts_expand.py  test_prompts_loader.py  test_provider_registry.py  test_rpc_mode.py  test_secrets.py  test_session_trust_persist.py  test_session_types.py  test_session_utils.py  (+16 more)
(+211 files in other folders)
